fix: fix resubscribe abd unsubsribe button
